--- a/.gitignore
+++ b/.gitignore
@@ -227,5 +227,13 @@ $RECYCLE.BIN/
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 
+#env part 2
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.production
+
 
 # End of https://www.gitignore.io/api/node,macos,linux,windows,webstorm,visualstudiocode
