--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.3",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
